# Diplom_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1b69ea1eb7cc_добавил_ondelete_cascade.py  237a310f062e_добавил_поле_id_forked_в_shader.py  49f543138138_добавил_поле_hidden_в_комментарий.py  49f543138138_добавил_поле_hidden_в_комментарий.py~  7e798bbd7495_сделал_avatar_url_необязательным.py  997eeb2f131a_create_tables.py  a23a1090b90f_добавил_поле_background_url_для_.py
app/: __init__.py  exceptions.py  main.py  main.py~  settings.py
app/api/: __init__.py  auth.py  auth.py~  comments.py  comments.py~  likes.py  likes.py~  profile.py  profile.py~  shaders.py  shaders.py~
app/db/: __init__.py  base.py
app/models/: __init__.py  comment.py  comment.py~  like.py  shader.py  user.py  user.py~
app/schemas/: __init__.py  __init__.py~  update_biography.py
app/schemas/auth/: __init__.py  update_password.py  update_password.py~  user_login.py  user_register.py
app/schemas/comment/: __init__.py  comment.py~  post_comment.py  post_comment.py~  toggle_hidden.py
app/schemas/shader/: __init__.py  __init__.py~  shader.py  shader_in.py  shader_out.py
app/schemas/user/: __init__.py
app/security/: __init__.py  dependencies.py  dependencies.py~  utils.py
