[project]
name = "diplom-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1,<2.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "bcrypt>=4.3.0,<5.0.0",
    "fastapi[all]>=0.115.8,<0.116.0",
    "passlib>=1.7.4,<2.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "python-jose>=3.4.0,<4.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
]
